--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "bootstrap": "^4.5.0",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
     "logkitty": "^0.7.1",
     "react": "~16.11.0",
+    "react-bootstrap": "^1.1.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
     "react-native-elements": "^2.0.4",
