--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/drawer": "^5.8.5",
     "bootstrap": "^4.5.0",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
@@ -22,8 +23,12 @@
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
+    "react-native-unordered-list": "^1.0.4",
+    "react-native-vector-icons": "^7.0.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
+    "react-navigation-drawer": "^2.5.0",
+    "react-navigation-native": "0.0.0",
     "react-navigation-stack": "^2.8.2"
   },
   "devDependencies": {
