--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-navigation": "^4.4.0",
     "react-navigation-drawer": "^2.5.0",
     "react-navigation-native": "0.0.0",
-    "react-navigation-stack": "^2.8.2"
+    "react-navigation-stack": "^2.8.2",
+    "expo-screen-orientation": "~1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
