--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@react-navigation/drawer": "^5.8.5",
     "bootstrap": "^4.5.0",
     "expo": "~38.0.8",
+    "expo-screen-orientation": "~1.1.1",
     "expo-status-bar": "^1.0.2",
+    "lodash": "^4.17.19",
     "logkitty": "^0.7.1",
     "react": "~16.11.0",
     "react-bootstrap": "^1.1.0",
@@ -29,8 +31,7 @@
     "react-navigation": "^4.4.0",
     "react-navigation-drawer": "^2.5.0",
     "react-navigation-native": "0.0.0",
-    "react-navigation-stack": "^2.8.2",
-    "expo-screen-orientation": "~1.1.1"
+    "react-navigation-stack": "^2.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
