--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Sudoku-Mobile-App",
-    "slug": "Sudoku-Mobile-App",
+    "name": "Sudoku-Solver-App",
+    "slug": "Sudoku-Solver-App",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -17,7 +17,13 @@
       "**/*"
     ],
     "ios": {
+      "bundleIdentifier": "sudoku.solver.app",
+      "buildNumber": "1.0.0",
       "supportsTablet": true
+    },
+    "android": {
+      "package": "sudoku.solver.app",
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png"
